--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,scss}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,scss}\""
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,scss}\"",
+    "prepare": "husky install",
+    "lint-staged": {
+      "*.{js,jsx,ts,tsx}": [
+        "eslint --fix",
+        "prettier --write"
+      ]
+    }
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
@@ -36,6 +43,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
