--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@tailwindcss/vite": "^4.2.0",
     "clsx": "^2.1.1",
     "dexie": "^4.3.0",
